syntax = "proto3";
package api;
option go_package = "github.com/Hahn814/magos/proto/magos/v1/api";

import "magos/v1/types/types.proto";

service API {
    rpc Hello (types.HelloRequest) returns (types.HelloResponse) {}
    rpc RegisterAgentServer (types.RegisterAgentServerRequest) returns (types.RegisterAgentServerResponse) {}
    rpc GetAgent(types.GetAgentRequest) returns (types.GetAgentResponse) {}
}