syntax = "proto3";
package types;
option go_package = "github.com/Hahn814/magos/proto/magos/v1/types";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string name = 1;
}

message RegisterAgentServerRequest {
    string address = 1;
}

message RegisterAgentServerResponse {
    string address = 1;
}